--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -32,4 +32,4 @@ CLOUDINARY_API_KEY=265357592751812
 
 CLOUDINARY_API_SECRET=ZY_2OsvPM82sifvt5PjZdv4fGJE
 
-FRONTEND_URL="http://localhost:3001"
+FRONTEND_URL="http://192.168.100.18:5000"
