--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@rneui/base": "^4.0.0-rc.6",
@@ -17,6 +18,11 @@
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-document-picker": "^8.1.1",
+    "react-native-flash-message": "^0.3.1",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-vector-icons": "^9.2.0",
@@ -43,5 +49,5 @@
   "jest": {
     "preset": "react-native"
   },
-  "proxy": "http://192.168.100.18:5000"
+  "proxy": "http://192.168.100.18:8081"
 }
