--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -262,6 +262,8 @@ dependencies {
 
     implementation project(':react-native-vector-icons')
 
+    implementation project(':lottie-react-native')
+
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
