--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@rneui/themed": "^4.0.0-rc.6",
     "axios": "^0.27.2",
     "deprecated-react-native-prop-types": "^2.3.0",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-addons-shallow-compare": "^15.6.3",
