--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "18.1.0",
     "react-addons-shallow-compare": "^15.6.3",
     "react-native": "0.70.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-document-picker": "^8.1.1",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "^2.6.0",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
     "react-native-stars": "^1.2.2",
+    "react-native-svg": "^13.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.9",
     "react-redux": "^8.0.2",
