--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -131,9 +131,9 @@ def reactNativeArchitectures() {
 }
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    ndkVersion '32'
 
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.gameapp"
@@ -227,6 +227,7 @@ android {
             keyPassword 'android'
         }
     }
+    buildToolsVersion '28.0.3'
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -267,7 +268,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
